@@ -8,6 +8,7 @@
 - Configurable DCI summary tables
 - Default background color for new network maps made configurable
 - Logged in users cannot be deleted
+- Empty containters have "Normal" status instead of "Unknown"
 - Management console:
 	- Charts can be created from table data
 
